Add conanfile and conanbuildinfo processing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,11 @@ project(downloader)
 
 set(CMAKE_CXX_STANDARD 11)
 
+if(EXISTS ${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+    include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+    conan_basic_setup()
+else()
+    message(SEND_ERROR "The file conanbuildinfo.cmake doesn't exist, you have to run conan install first")
+endif()
+
 add_executable(downloader main.cpp)
